--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ button {
     width: 100%;
     height: 100dvh;
     left: 0;
-    background: linear-gradient(to top, transparent, #0f172a 80%);
+    background: linear-gradient(to top, transparent, #0f172a 40%);
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     transition: clip-path 0.5s ease-in-out;
 }
@@ -196,10 +196,10 @@ header {
     align-items: center;
     position: relative;
     z-index: 10;
-    padding: 0 2rem;
+    padding: 172px 2rem 0 2rem;
 }
 
-.header__patron-puntos {
+header .patron-puntos {
     width: 100%;
     height: 700px;
     background-image: radial-gradient(circle, #d1d5db 1px, transparent 1px);
@@ -212,12 +212,11 @@ header {
     z-index: -10;
 }
 
-.header__title {
+header .title {
     font-size: 48px;
     text-align: center;
-    margin-top: 172px;
 }
-.header__img-orcodev {
+header .img-orcodev {
     border-radius: 50%;
     max-width: 100%;
     height: auto;
@@ -238,6 +237,12 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100dvh;
+}
+
+.section__aboutme > div > h2 {
+    text-align: center;
 }
 
 .section__aboutme .section__title {
@@ -288,8 +293,9 @@ section {
 
 .section__contact {
     background-color: #030712;
-    padding: 80px 0 70px 0;
+    padding: 120px 0 70px 0;
     width: 100%;
+    height: 100dvh;
 }
 
 .section__contact h2 {
@@ -334,14 +340,17 @@ section {
 }
 
 footer {
-    padding: 53px 0 113px 20px;
+    padding: 120px 0 113px 20px;
     background-color: #dbdbdb;
+    height: 100dvh;
 }
 
 footer .nav__logo {
     background-color: #0f172a;
     padding: 1rem;
     border-radius: 10px;
+    transform: scale(0.4);
+    transform-origin: left bottom;
 }
 
 footer .code_text-background {
@@ -420,5 +429,28 @@ footer .code_text-background {
 
     .nav__item:hover {
         --clippy: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+    }
+
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 82px;
+        width: 60%;
+        height: 100dvh;
+        margin: 0 auto;
+    }
+
+    header .patron-puntos {
+        height: calc(100dvh * 1.5);
+    }
+
+    header .title {
+        width: 50%;
+        text-align: left;
+    }
+
+    header .img-orcodev {
+        margin: 0;
     }
 }
