--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ button {
     top: 80px;
     bottom: 0;
     width: 100%;
-    height: 100dvh;
+    height: 100vh;
     left: 0;
     background: linear-gradient(to top, transparent, #0f172a 40%);
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
@@ -193,15 +193,17 @@ button {
 header {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
     position: relative;
     z-index: 10;
-    padding: 172px 2rem 0 2rem;
+    padding: 80px 2rem 0 2rem;
+    height: 100vh;
 }
 
 header .patron-puntos {
     width: 100%;
-    height: 700px;
+    height: calc(100dvh * 1.5);
     background-image: radial-gradient(circle, #d1d5db 1px, transparent 1px);
     background-size: 13px 13px;
     mask-image: linear-gradient(to right, black 60%, transparent);
@@ -220,7 +222,7 @@ header .img-orcodev {
     border-radius: 50%;
     max-width: 100%;
     height: auto;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     object-fit: cover;
 }
@@ -238,10 +240,10 @@ section {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100dvh;
+    height: 100vh;
 }
 
-.section__aboutme > div > h2 {
+.section__aboutme h2 {
     text-align: center;
 }
 
@@ -250,9 +252,21 @@ section {
     font-size: 32px;
     padding: 0;
 }
+
+.section__aboutme .logo-orcodev {
+    display: flex;
+    justify-content: center;
+    font-family: 'Source Code Pro', monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: 700;
+    transform: scale(0.6);
+    transform-origin: center bottom;
+}
+
 .section__aboutme .section__text {
-    color: #fff;
-    font-size: 16px;
+    color: #fafafa;
+    font-size: clamp(1rem, 2.5vw, 20px);
     margin: 41px 32px 57px 32px;
     text-align: left;
     line-height: 18.75px;
@@ -283,19 +297,22 @@ section {
 }
 
 .section__services-title {
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
-.section__text {
+.section__services .section__text {
     text-align: center;
     line-height: 18.75px;
+    font-size: 16px;
 }
 
 .section__contact {
     background-color: #030712;
     padding: 120px 0 70px 0;
     width: 100%;
-    height: 100dvh;
+    height: 100vh;
+    font-size: clamp(0.8rem, 2.5vw, 20px);
 }
 
 .section__contact h2 {
@@ -328,6 +345,13 @@ section {
     outline-offset: 2px;
     font-size: 16px;
     color: #fff;
+    color: #000;
+    font-size: 24px;
+    padding: 0.5rem 1rem;
+}
+
+.section__form textarea {
+    height: 115px;
 }
 
 .form-button {
@@ -340,9 +364,9 @@ section {
 }
 
 footer {
-    padding: 120px 0 113px 20px;
+    padding: 100px 0 113px 20px;
     background-color: #dbdbdb;
-    height: 100dvh;
+    height: 100vh;
 }
 
 footer .nav__logo {
@@ -430,27 +454,152 @@ footer .code_text-background {
     .nav__item:hover {
         --clippy: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     }
+    /* ---------------------------------------------------------- */
+    /* ---------------------------------------------------------- */
+    /*         fin de navegacion */
+    /* ---------------------------------------------------------- */
+    /* ---------------------------------------------------------- */
 
     header {
-        flex-direction: row;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         align-items: center;
-        padding-top: 82px;
-        width: 60%;
-        height: 100dvh;
+        justify-items: center;
+        height: 100vh;
         margin: 0 auto;
     }
 
-    header .patron-puntos {
-        height: calc(100dvh * 1.5);
-    }
-
     header .title {
-        width: 50%;
+        width: 70%;
         text-align: left;
     }
 
     header .img-orcodev {
         margin: 0;
+        max-width: 70%;
+        /* justify-self: end; */
+    }
+
+    .section__aboutme {
+        flex-direction: row-reverse;
+        justify-content: center;
+        gap: 90px;
+    }
+
+    .aboutme__text-wrapper {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+    }
+
+    .section__check-img {
+        width: 211px;
+        height: 211px;
+    }
+
+    .section__aboutme h2 {
+        text-align: left;
+    }
+    .section__aboutme h2 span {
+        display: inline-flex;
+    }
+
+    .section__aboutme .section__text {
+        margin-left: 0;
+        margin-right: 30px;
+        margin-bottom: 0;
+        /* font-size: 24px; */
+        line-height: 28px;
+    }
+
+    .section__services {
+        display: grid;
+        grid-template-columns: repeat(3, 29%);
+        height: 100vh;
+        padding: 0;
+        align-items: start;
+        align-content: center;
+        background: linear-gradient(to top, #6b7280, white 30%);
+    }
+
+    .section__services-title {
+        grid-column: span 3;
+        font-size: 24px;
+    }
+
+    .section__card {
+        margin: 4rem 0;
+        width: 100%;
+        /* justify-content: start; */
+    }
+
+    .section__services .section__title {
+        font-size: 22px;
+    }
+
+    .section__contact {
+        display: grid;
+        grid-template-columns: 40% 45%;
+        grid-template-rows: repeat(8, 1fr);
+    }
+
+    .section__contact h2 {
+        text-align: end;
+        margin-right: 4rem;
+        margin-top: 2rem;
+    }
+
+    .section__form {
+        padding: 0;
+    }
+
+    footer {
+        display: grid;
+        grid-template-columns: repeat(2, 40%);
+        /* grid-template-rows: repeat(2, 1fr); */
+        grid-template-areas:
+            'logo       social'
+            'copyright  social';
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .nav__logo {
+        grid-area: logo;
+        place-self: end start;
+    }
+
+    .footer__copyright {
+        grid-area: copyright;
+        place-self: start;
+    }
+
+    .social__icons {
+        margin: 0;
+        grid-area: social;
+        place-self: center end;
+    }
+}
+
+@media (min-width: 1200px) {
+    header {
+        grid-template-columns: repeat(2, 40%);
+    }
+    .section__services {
+        grid-template-columns: repeat(3, 26%);
+    }
+    footer {
+        grid-template-columns: repeat(2, 30%);
+    }
+}
+
+@media (min-width: 1800px) {
+    .section__contact {
+        grid-template-columns: 40% 40%;
+    }
+    footer {
+        grid-template-columns: repeat(2, 25%);
     }
 }
